streetbot/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: streetbot
  labels:
    app: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: registry.digitalocean.com/streetbot/app:latest
        ports:
        - containerPort: 4001
